kube/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: back
spec:
  ports:
  - name: api
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: api-${TARGET_ROLE}
  type: ClusterIP
