kube/api/test-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-test-green
  namespace: back
spec:
  ports:
  - name: api
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: api-green
  type: ClusterIP
