kube/api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: back
spec:
  parentRefs:
  - name: default-gateway
    namespace: kube-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: api
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-test-route
  namespace: back
spec:
  parentRefs:
  - name: default-gateway
    namespace: kube-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api-test
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: api-test-green
      port: 3000
